--- a/V2 of project/v2.css
+++ b/V2 of project/v2.css
@@ -48,6 +48,13 @@
     font-size: 20px;
 }
 
+.utilityButtons{
+    background-color: rgb(238, 238, 238);
+    border: none;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
 .homeBtn {
     background-color: white;
     width: 50px;
@@ -74,6 +81,8 @@
     font-size: 25px;
     resize: vertical;
     min-height: 50px;
+    height: auto;
+
     width: 500px;
     background-color: white;
 }
