modified:   v2.css     modified:   v2.html     modified:   v2.js     icons8-chef-hat-ios-16-16.png     icons8-chef-hat-ios-16-32.png

--- a/V2 of project/v2.css
+++ b/V2 of project/v2.css
@@ -4,7 +4,8 @@
 
 * {
     background-color: rgb(34, 40, 49);
-    font-family: 'Inconsolata', monospace,'Bebas Neue', cursive;
+    font-family: 'Courgette','Inconsolata', monospace,'Bebas Neue', cursive;
+    /* first font is just for fun for now */
     margin: 0;
     padding: 0;
 }
